--- a/Kaiserreich Korean Translation/localisation/KR_White_Ruthenia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_White_Ruthenia_l_english.yml
@@ -88,7 +88,7 @@ WHR_trade_union_desc:0 "노동조합에 대한 우리의 인식과 통제는 우
 WHR_economic_boom_idea:0 "경제 호황"
 WHR_economic_boom_idea_desc:0 "BNP의 자유 시장 정책은 벨로루시 경제를 풍요롭게 하고 우리의 국제적 명성을 향상시키는데 성공적이었습니다."
 WHR_paramilitary:0 "NBP 준 군사 조직"
-WHR_paramilitary_desc:0 "지기문트의 NBP 준 군사 조직의 형성은 벨로루시의 적들에 대한 싸움에서 엘리트 분열을 중단시키면서 우리 군대의 규모와 기강을 증가시키는데 도움을 주었습니다."
+WHR_paramilitary_desc:0 "지그문트의 NBP 준 군사 조직의 형성은 벨로루시의 적들에 대한 싸움에서 엘리트 분열을 중단시키면서 우리 군대의 규모와 기강을 증가시키는데 도움을 주었습니다."
 WHR_labourbattalions:0 "노동 대대"
 WHR_labourbattalions_desc:0 "우리의 노동 대대와 공공 사업 프로그램은 둘 다 실업률을 낮추고, 국가를 건설할 규율을 갖춘 노동자들을 우리에게 제공했습니다."
 WHR_self_help:0 "벨라루스인의 자립"
@@ -343,10 +343,10 @@ whiteruthenia.48.d:0 "압제적인 독일 군주제를 타도하고 생디칼리
 whiteruthenia.48.a:0 "클럽에 온걸 환영하오 동무!"
 whiteruthenia.48.b:0 "그들은 돕기에는 너무 멀다."
 whiteruthenia.49.t:0 "코뮌이 우리를 수락하다!"
-whiteruthenia.49.d:0 "프랑스 코뮌은 인터내셔널에 가입시켜달라는 우리의 요청을 수락하였고, 우리는 이제 독일 제국주의자들 및 자본주의 착취자들과 맞서고 있습니다."
+whiteruthenia.49.d:0 "프랑스 코뮌은 인터내셔널에 가입시켜 달라는 우리의 요청을 수락하였고, 우리는 이제 독일 제국주의자들 및 자본주의 착취자들과 맞서고 있습니다."
 whiteruthenia.49.a:0 "만세!"
 whiteruthenia.50.t:0 "코뮌이 우리를 거절하다!"
-whiteruthenia.50.d:0 "프랑스 코뮌은 인터내셔널에 가입시켜달라는 우리의 요청을 거절했습니다! 이 불행한 결과는 우리가 본질적으로 모든 면에서 적들에게 둘러싸여 있다는 것을 의미합니다."
+whiteruthenia.50.d:0 "프랑스 코뮌은 인터내셔널에 가입시켜 달라는 우리의 요청을 거절했습니다! 이 불행한 결과는 우리가 본질적으로 모든 면에서 적들에게 둘러싸여 있다는 것을 의미합니다."
 whiteruthenia.50.a:0 "그건 그들의 손실이다!"
 whiteruthenia.51.t:0 "동유럽 연방의 가입을 원하는 벨로루시"
 whiteruthenia.51.d:0 "동유럽의 새로운 생디칼리스트 국가들이 연합하면서 벨로루시 또한 우리와 함께하자고 요청했습니다. 우리는 함께 동부의 노동자들의 이익을 방어할 수 있는 견고한 세력권을 만들 것입니다."
@@ -358,7 +358,7 @@ whiteruthenia.52.a:0 "만세!"
 whiteruthenia.53.t:0 "폴란드가 우리를 거절하다!"
 whiteruthenia.53.d:0 "폴란드는 그들과 동맹을 맺으려는 우리의 요청을 거절했습니다!"
 whiteruthenia.53.a:0 "그건 그들의 손실이다!"
-whiteruthenia.54.t:0 "제4인터내셔널의 가입을 원하는 벨로루시"
+whiteruthenia.54.t:0 "제 4 인터내셔널의 가입을 원하는 벨로루시"
 whiteruthenia.54.d:0 "오늘 벨로루시 정부는 혁명을 받아들이고 독일의 지원을 받는 독재자들을 몰아냈으며 제 4 인터내셔널에 가입할 것을 요청했습니다. 그들을 받아들임으로써 우리는 그들이 어느나라에 살고 있든지 간에 우리가 노동자들을 보호한다는 것을 서부의 우호적인 국가에 증명할 수 있을 것입니다."
 whiteruthenia.54.a:0 "물론 우리와 함께할 수 있다!"
 whiteruthenia.54.b:0 "아니, 벨로루시는 소비에트의 영토이다!"
@@ -399,74 +399,74 @@ whiteruthenia.65.d:0 "벨로루시는 내전으로 주의가 산만해진 틈을
 whiteruthenia.65.a:0 "우리는 복수할 것이다!"
 whiteruthenia.67.t:0 "벨로루시의 정세"
 whiteruthenia.67.d:0 "On the 9th of March 1918 Russian troops abandoned Belarus after the signing of the Treaty of Brest-Litovsk. In the immediate aftermath the All-Belarusian Congress declared the formation of the Belarusian People's Republic catching even Germany by surprise. At first the Germans did not recognise the new state, having intended to use Belarus as a bargaining chip with the Bolsheviks. However after the German Intervention in Russia, an independent Belorussian state was recognised by Germany - under the condition that Wilhelm II's brother Heinrich became King, taking the regnal name Hienry I. Under Hienry, the Belorussian government began a relatively successful programme of land reform and education programs. Though the former King was effective, illiteracy remained mostly endemic, not helped by the inability of Belarusian nationalists to decide between a Latin or Cyrillic script for their revival of the Belarusian language. After Heinrich's death, his son Waldemar ascended to the throne as Uladzimir I. Plagued with the recurring effects of haemophilia and not trained to any reasonable level in statecraft, Uladzimir has proven ineffective in giving the country the absolutist rule it so desperately needs. As such Belorussia remains much as it was after the Weltkrieg. Recognised as little more than a German puppet state with a mostly agrarian and poverty-stricken population, the country cries out for change. The political status quo is currently being disturbed by the machinations of Uladzimir's brother and head of the NBP secret police Sigismund, a figure that sees himself as the rightful heir to the throne. The controversial Prince has made contact with both pro-Russian and Belarusian nationalist groups in his barely concealed plotting to seize the throne from his Germanophile brother. As tensions east, west and at home grow Belorussia's situation looks increasingly precarious."
-whiteruthenia.67.a:0 "Only time shall tell..."
-whiteruthenia.68.t:0 "Belorussian Demands Our Territory!"
-whiteruthenia.68.d:0 "Following a rise in nationalism and their increasingly independently-minded foreign policy, the Belorussian government has threatened war against us unless we hand Brest-Litvosk and Gomel over to them!"
-whiteruthenia.68.a:0 "Fine..."
-whiteruthenia.68.b:0 "Never!"
-whiteruthenia.69.t:0 "Ukraine Agrees!"
-whiteruthenia.69.d:0 "The Ukrainians have seen sense and have returned our rightful territories!"
-whiteruthenia.69.a:0 "Come home to the Ruthenian nation!"
-whiteruthenia.70.t:0 "Ukraine Refuses!"
-whiteruthenia.70.d:0 "Unfortunately the Ukrainians have refused our demands and are prepared to defend themselves, even if it means war."
-whiteruthenia.70.a:0 "There's nothing we can do."
-whiteruthenia.70.b:0 "So be it! To war!"
-whiteruthenia.71.t:0 "Belorussia Seeks Support"
-whiteruthenia.71.d:0 "The Belorussian government, after recently claiming Brest-Litvosk and Gomel to be their rightful territories, have come to us to request our support in pressuring Ukraine to cede these lands to Belorussia. As Belorussia is a part of the Reichspakt we have a duty to at least consider their request. How shall we reply?"
-whiteruthenia.71.a:0 "Back them up."
-whiteruthenia.71.b:0 "Decline their request."
-whiteruthenia.72.t:0 "The Reichspakt Demands Territory!"
-whiteruthenia.72.d:0 "The Belorussians, backed up by their German masters, have demanded that we hand over Brest-Litvosk and Gomel to them! While we could likely fend off the Belorussians, the influence of Germany makes this situation far more dire for us."
-whiteruthenia.72.a:0 "We have no choice."
-whiteruthenia.72.b:0 "Never!"
-whiteruthenia.73.t:0 "Ukraine Refuses Demands!"
-whiteruthenia.73.d:0 "The Ukrainians have refused our demands to transfer Gomel and Brest-Litvosk to Belorussia. Our envoy was laughed all the way out of their country, and eyes across Europe are watching events with keen interest."
-whiteruthenia.73.a:0 "Let us pull back."
-whiteruthenia.73.b:0 "We shall take it by force!"
-whiteruthenia.74.t:0 "Germany Refuses To Assist!"
-whiteruthenia.74.d:0 "Unfortunately the Germans have refused our request to pressure Ukraine into returning our rightful lands!"
-whiteruthenia.74.a:0 "Damn!"
-whiteruthenia.75.t:0 "Belorussia Seeks Support"
-whiteruthenia.75.d:0 "The Belorussian government, after recently claiming Brest-Litvosk and Gomel to be their rightful territories, have come to us to request our support in pressuring Ukraine to cede these lands to Belorussia. As a junior partner in our alliance we should at least consider helping them out. How shall we reply?"
-whiteruthenia.75.a:0 "Russia and Belorussia should act as one."
-whiteruthenia.75.b:0 "Decline their request."
-whiteruthenia.76.t:0 "Russia and Belorussia Demand Land!"
-whiteruthenia.76.d:0 "The Belorussians, backed up by their Russian allies, have demanded that we hand over Brest-Litvosk and Gomel to them! While we could likely fend off the Belorussians, the influence of a powerful Russia makes this situation far more dire for us."
-whiteruthenia.76.a:0 "We have no choice..."
-whiteruthenia.76.b:0 "Never!"
-whiteruthenia.77.t:0 "Ukraine Refuses Demands!"
-whiteruthenia.77.d:0 "The Ukrainians have refused our demands to transfer Gomel and Brest-Litvosk to Belorussia."
-whiteruthenia.77.a:0 "Let us pull back."
-whiteruthenia.77.b:0 "Then we shall take it by force!"
-whiteruthenia.78.t:0 "Russia Refuses To Assist!"
-whiteruthenia.78.d:0 "Unfortunately the Russians have refused our request to pressure Ukraine into returning our rightful lands!"
-whiteruthenia.78.a:0 "Damn!"
-whiteruthenia.79.t:0 "Urbanising Belorussia"
-whiteruthenia.79.d:0 "The countryside of Belorussia has one of the smallest population densities in Europe, with a large number of cities being populated more by the Jewish minority than our own people. If Belorussia is to begin to develop a modern economy and industrialise, it is essential that our farmers are encouraged to settle in the cities. Unfortunately, the cost of promoting this migration as well as the cost of building new housing for the migrating residents could be expensive and take a long time to complete."
-whiteruthenia.79.a:0 "We can take our time."
-whiteruthenia.79.b:0 "Put some emphasis on this."
-whiteruthenia.79.c:0 "Urbanisation must be an absolute priority."
-whiteruthenia.80.t:0 "Urbanisation Policy Shows Results"
-whiteruthenia.80.d:0 "After many months of encouraging urbanisation and settlement into Belorussia's major towns, our efforts are finally beginning to bear fruit. Town centres that had been relatively bereft of life since the Tsarist period are now booming with life and civic institutions are gaining strength. Our industry has already begun to benefit from the influx of new workers."
-whiteruthenia.80.a:0 "The process is underway."
-whiteruthenia.81.t:0 "Urbanisation Policy Succeeds!"
-whiteruthenia.81.d:0 "After years of hard work our efforts in encouraging Belorussians to move to the cities have finally paid off, and our economy has massively improved as a result. This will no doubt greatly aid in encouraging foreign investment and alleviating the effects of Black Monday."
-whiteruthenia.81.a:0 "Finally!"
-whiteruthenia.82.t:0 "Encouraging Industrialisation"
-whiteruthenia.82.d:0 "For a long time Belorussia has lacked industry, receiving little investment from the Tsarist state prior to the Weltkrieg and treated with benign neglect by the Reichspakt system. To make matters worse much of what Russian industry there was began to fall into desrepair as a result of the Weltkrieg and collapse of the Russian Empire, with German companies taking their place. With Black Monday causing immense damage to said German industries, it is clear that Belorussia must begin to stand on its own two feet industrially."
-whiteruthenia.82.a:0 "We can afford some more funding."
-whiteruthenia.82.b:0 "Belorussia must embrace the Industrial Revolution!"
-whiteruthenia.82.c:0 "Let's not spend too much."
-whiteruthenia.83.t:0 "Mechanised Farming Reform"
-whiteruthenia.83.d:0 "With the progress of technology, farmings methods have already begun to improve with inventions like tractors allowing us to produce yields far in excess of what was possible previously. Despite these improvements, Belorussia remains distinctly backwards and its farming is rather inefficient by modern standards. It is clear that things must be improved if Belorussia is to take its place in the world as a modern nation."
-whiteruthenia.83.a:0 "There's no need for a huge effort."
-whiteruthenia.83.b:0 "Some focus on mechanisation is ideal."
-whiteruthenia.83.c:0 "Farming must be completely mechanised!"
-whiteruthenia.84.t:0 "Improving Rural Infrastructure"
-whiteruthenia.84.d:0 "In many places the roads of the Belorussian countryside are extremely outdated and pretty much all of them date back to Tsarist-era Russia. There is minimal paving outside of the capital and most villages are connected only by terrible dirt tracks - an issue that has plagued military planners for years. It is clear that something must be done about this if we are to become a modern nation."
-whiteruthenia.84.a:0 "Only limited funding is needed."
-whiteruthenia.84.b:0 "Improve some of the worst offenders."
-whiteruthenia.84.c:0 "The road network must be completely improved!"
+whiteruthenia.67.a:0 "오직 시간만이 말해줄 것이다..."
+whiteruthenia.68.t:0 "벨로루시가 우리의 영토를 요구하다!"
+whiteruthenia.68.d:0 "민족주의와 그들의 점점 더 독자적이 되어가는 외교 정책에 뒤이어, 벨로루시 정부는 우리가 브레스트-리토프스크와 고멜을 그들에게 넘겨주지 않으면 우리를 상대로 전쟁을 하겠다고 위협했습니다."
+whiteruthenia.68.a:0 "좋다..."
+whiteruthenia.68.b:0 "안돼!"
+whiteruthenia.69.t:0 "우크라이나가 승낙하다!"
+whiteruthenia.69.d:0 "우크라이나는 분별력을 보았고 우리의 정당한 영토를 되찾았습니다!"
+whiteruthenia.69.a:0 "루테니아로 돌아와라!"
+whiteruthenia.70.t:0 "우크라이나가 거절하다!"
+whiteruthenia.70.d:0 "불행하게도 우크라이나는 우리의 요구를 거절했고, 그것이 전쟁을 의미한다고 할지라도 그들 스스로를 방어할 준비가 되어 있습니다."
+whiteruthenia.70.a:0 "우리가 할 수 있는 일은 없다."
+whiteruthenia.70.b:0 "그러면 그렇게 하자! 전쟁!"
+whiteruthenia.71.t:0 "벨로루시의 지원 요청"
+whiteruthenia.71.d:0 "벨로루시 정부는 최근 브레스트-리토프스크와 고멜이 그들의 정당한 영토라고 주장한 후 우리에게 우크라이나가 벨로루시로 이 땅을 양도하도록 압력을 가하도록 하는 것에 대한 지지를 요청해왔습니다. 벨로루시는 제국 조약의 한 부분이기 때문에 우리는 적어도 그들의 요구를 고려할 의무가 있습니다. 어떻게 대답해야 할까요?"
+whiteruthenia.71.a:0 "그들을 지원하라."
+whiteruthenia.71.b:0 "이 요청을 거절하라."
+whiteruthenia.72.t:0 "제국 조약이 영토를 요구하다!"
+whiteruthenia.72.d:0 "주인 독일에게 지원을 받은 벨로루시는 우리에게 브레스트-리토프스크와 고멜을 넘겨줄 것을 요구했습니다. 우리가 벨로루시를 막을 수 있을 것 같지만, 독일의 영향으로 인해 이 상황은 훨씬 더 심각해졌습니다."
+whiteruthenia.72.a:0 "우리는 선택의 여지가 없다."
+whiteruthenia.72.b:0 "안돼!"
+whiteruthenia.73.t:0 "우크라이나가 요구를 거절하다!"
+whiteruthenia.73.d:0 "우크라이나는 고멜과 브레스트-리토프스크를 벨로루시로 이양하라는 우리의 요구를 거절했습니다. 우리의 특사는 그들의 국가에서 멀리 떨어진 곳에서 비웃음을 당했고, 유럽 전역의 시선들은 큰 관심을 가지고 이 사건을 지켜보고 있습니다."
+whiteruthenia.73.a:0 "물러나자."
+whiteruthenia.73.b:0 "그렇다면 우리는 힘으로 받아낼 것이다!"
+whiteruthenia.74.t:0 "독일이 지원을 거절하다!"
+whiteruthenia.74.d:0 "불행하게도 독일은 우크라이나에 우리의 정당한 영토를 반환하도록 압력을 가하라는 우리의 요청을 거절했습니다."
+whiteruthenia.74.a:0 "젠장!"
+whiteruthenia.75.t:0 "벨로루시의 지원 요청"
+whiteruthenia.75.d:0 "벨로루시 정부는 최근 브레스트-리토프스크와 고멜이 그들의 정당한 영토라고 주장한 후 우리에게 우크라이나가 벨로루시로 이 땅을 양도하도록 압력을 가하도록 하는 것에 대한 지지를 요청해왔습니다. 우리 동맹의 후배로서 우리는 최소한 그들을 도울 것을 고려해야 합니다. 어떻게 대답해야 할까요?"
+whiteruthenia.75.a:0 "러시아와 벨로루시는 하나로 행동해야 한다."
+whiteruthenia.75.b:0 "이 요청을 거절하라."
+whiteruthenia.76.t:0 "러시아와 벨로루시가 영토를 요구하다!"
+whiteruthenia.76.d:0 "동맹국 러시아의 지원을 받은 벨로루시는 우리에게 브레스트-리토프스크와 고멜을 넘겨줄 것을 요구했습니다. 우리가 벨로루시를 막을 수 있을 것 같지만, 강력한 러시아의 영향력으로 인해 이 상황은 훨씬 더 심각해졌습니다."
+whiteruthenia.76.a:0 "우리는 선택의 여지가 없다..."
+whiteruthenia.76.b:0 "안돼!"
+whiteruthenia.77.t:0 "우크라이나가 요구를 거절하다!"
+whiteruthenia.77.d:0 "우크라이나는 고멜과 브레스트-리트보스크를 벨로루시로 이양하라는 우리의 요구를 거절했습니다."
+whiteruthenia.77.a:0 "물러나자"
+whiteruthenia.77.b:0 "그렇다면 우리는 힘으로 받아낼 것이다!"
+whiteruthenia.78.t:0 "러시아가 지원을 거절하다!"
+whiteruthenia.78.d:0 "불행하게도 러시아는 우크라이나에 우리의 정당한 영토를 반환하도록 압력을 가하라는 우리의 요청을 거절했습니다."
+whiteruthenia.78.a:0 "젠장!"
+whiteruthenia.79.t:0 "벨로루시 도시화"
+whiteruthenia.79.d:0 "벨로루시의 시골 지역은 유럽에서 가장 작은 인구 밀도를 가지고 있는데, 많은 수의 도시들이 우리 민족보다 유대 소수 민족들이 더 많이 거주하고 있습니다. 벨로루시의 현대 경제와 산업화를 발전시키기 위해서는 우리 농부들이 도시에 정착하도록 권장하는 것이 필수적입니다. 불행히도 이주를 촉진하는 비용과 이주민들을 위한 새 주택 건설 비용은 비싸고 완공하는데 오랜 시간이 걸릴 수 있습니다."
+whiteruthenia.79.a:0 "우리는 시간을 할애할 수 있다."
+whiteruthenia.79.b:0 "이것을 강조해라."
+whiteruthenia.79.c:0 "도시화는 절대적인 우선 순위가 되어야 한다."
+whiteruthenia.80.t:0 "도시화 정책의 결과"
+whiteruthenia.80.d:0 "여러 달 동안 도시화와 벨로루시의 주요 도시로의 정착을 장려한 후, 우리의 노력은 마침내 결실을 맺기 시작하고 있습니다. 전제 군주제 이후 상대적으로 생활이 어려웠던 도시 중심지는 현재 삶과 함께 호황을 누리고 있으며 시민 단체는 힘을 얻고 있습니다. 우리 산업은 이미 새로운 노동자들의 유입으로 인해 이익을 얻고 있습니다."
+whiteruthenia.80.a:0 "그 과정은 진행 중이다."
+whiteruthenia.81.t:0 "도시화 정책은 성공했다!"
+whiteruthenia.81.d:0 "수년 간의 고된 노력 끝에 벨로루시인들이 도시로 이주하도록 격려하는 우리의 노력은 마침내 성과를 거두었고, 결과적으로 우리 경제는 엄청나게 개선되었습니다. 이는 분명 외국인 투자를 장려하고 검은 월요일 효과를 완화하는데 큰 도움이 될 것입니다."
+whiteruthenia.81.a:0 "마침내!"
+whiteruthenia.82.t:0 "산업화 촉진"
+whiteruthenia.82.d:0 "오랫동안 벨로루시는 산업이 부족하여 세계대전 이전의 전제 군주제 국가들로부터 거의 투자를 받지 못했고 제국 조약 시스템에 의해 무시되었습니다. 설상가상으로, 독일 기업들이 자리를 잡고 있는 가운데, 러시아 산업은 세계대전과 러시아 제국의 붕괴의 결과로 황폐해지기 시작했습니다. 검은 월요일이 독일 산업에 막대한 피해를 입히고 있는 가운데, 벨로루시가 산업적으로 자립하기 시작해야 하는 것은 분명합니다."
+whiteruthenia.82.a:0 "우리는 더 많은 자금을 댈 수 있다."
+whiteruthenia.82.b:0 "벨로루시는 산업 혁명을 받아 들여야 한다!"
+whiteruthenia.82.c:0 "너무 많이 쓰지는 말자."
+whiteruthenia.83.t:0 "기계화 농업 개혁"
+whiteruthenia.83.d:0 "기술의 발전과 함께, 농사짓는 방법은 우리가 이전에 가능했던 것보다 훨씬 더 많은 수확을 생산할 수 있도록 하는 트랙터와 같은 발명으로 이미 개선되기 시작했습니다. 이러한 개선에도 불구하고, 벨로루시는 여전히 뚜렷하게 퇴보하고 있고 이 농업은 현대적 기준으로 보면 다소 비효율적입니다. 벨로루시가 현대 국가로서 세계에서 자리를 잡으려면 상황이 개선되어야 하는 것은 분명합니다."
+whiteruthenia.83.a:0 "큰 노력은 필요 없다."
+whiteruthenia.83.b:0 "기계화에 중점을 두는 것은 이상적이다."
+whiteruthenia.83.c:0 "농업은 완전히 기계화 되어야 한다!"
+whiteruthenia.84.t:0 "농촌 기반 개선"
+whiteruthenia.84.d:0 "많은 곳의 벨로루시 시골 도로는 극도로 낡았고 거의 대부분이 러시아 제국으로 거슬러 올라갑니다. 수도 외곽에는 최소한의 포장이 있으며, 대부분의 마을들은 몇 년 동안 군사 계획자들을 괴롭혀온 문제인 끔찍한 먼지 자국으로만 연결되어 있습니다. 우리가 현대 국가가 되려면 이 문제에 대해 뭔가 조치가 취해야 한다는 것은 분명합니다."
+whiteruthenia.84.a:0 "제한된 자금만이 필요하다."
+whiteruthenia.84.b:0 "최악의 범죄자들 중 일부를 개선하라."
+whiteruthenia.84.c:0 "도로 네트워크는 완전히 개선 되어야 한다!"
 whiteruthenia.85.t:0 "Clearing Pripyat Marshes"
 whiteruthenia.85.d:0 "The clearing of portions of the Pripyat marshses is now set to begin. Although the Pripyat marshes are vast and a major attempt to clear them is beyond our abilities even a limited clearance would still benefit our nation in providing new land for agriculture or industry."
 whiteruthenia.85.a:0 "Let us begin."
