--- a/Kaiserreich Korean Translation/localisation/KR_White_Ruthenia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_White_Ruthenia_l_english.yml
@@ -463,63 +463,63 @@ whiteruthenia.83.a:0 "큰 노력은 필요 없다."
 whiteruthenia.83.b:0 "기계화에 중점을 두는 것은 이상적이다."
 whiteruthenia.83.c:0 "농업은 완전히 기계화 되어야 한다!"
 whiteruthenia.84.t:0 "농촌 기반 개선"
-whiteruthenia.84.d:0 "많은 곳의 벨로루시 시골 도로는 극도로 낡았고 거의 대부분이 러시아 제국으로 거슬러 올라갑니다. 수도 외곽에는 최소한의 포장이 있으며, 대부분의 마을들은 몇 년 동안 군사 계획자들을 괴롭혀온 문제인 끔찍한 먼지 자국으로만 연결되어 있습니다. 우리가 현대 국가가 되려면 이 문제에 대해 뭔가 조치가 취해야 한다는 것은 분명합니다."
+whiteruthenia.84.d:0 "많은 곳의 벨로루시 시골 도로는 극도로 낡았고 거의 대부분이 러시아 제국 시절로 거슬러 올라갑니다. 수도 외곽에는 최소한의 포장만이 있으며, 대부분의 마을들은 몇 년 동안 군사 계획자들을 괴롭혀온 문제인 끔찍한 먼지 자국으로만 연결되어 있습니다. 우리가 현대 국가가 되려면 이 문제에 대해 뭔가 조치가 취해야 한다는 것은 분명합니다."
 whiteruthenia.84.a:0 "제한된 자금만이 필요하다."
 whiteruthenia.84.b:0 "최악의 범죄자들 중 일부를 개선하라."
 whiteruthenia.84.c:0 "도로 네트워크는 완전히 개선 되어야 한다!"
-whiteruthenia.85.t:0 "Clearing Pripyat Marshes"
-whiteruthenia.85.d:0 "The clearing of portions of the Pripyat marshses is now set to begin. Although the Pripyat marshes are vast and a major attempt to clear them is beyond our abilities even a limited clearance would still benefit our nation in providing new land for agriculture or industry."
-whiteruthenia.85.a:0 "Let us begin."
-whiteruthenia.86.t:0 "Pripay Marshes Drained!"
-whiteruthenia.86.d:0 "The draining of the marshes has finally come to an end with thousands of square miles of new land having been created for agriculture and industry. Already these areas are coming to be populated by migrants from elsewhere in the country willing to set up farms on the reclaimed marshland. No doubt this will aid our nation in the long run."
-whiteruthenia.86.a:0 "Finally!"
-whiteruthenia.87.t:0 "The Creation of BelAZ"
-whiteruthenia.87.d:0 "We have decided to implement our plans for the creation of BelAZ, a manufacturer capable of building various variants of vehicles and machinery at our direction depending on the needs of the state. While heavily funding the programme would be expensive and politically risky, it could undoubtedly pay off in the long run by boosting peripheral sectors and supply chains and it would greatly aid the Belorussian economy."
-whiteruthenia.87.a:0 "Invest a bit into BelAZ."
-whiteruthenia.87.b:0 "Give BelAZ a lot of funding."
-whiteruthenia.87.c:0 "BelAZ shall become one of Eastern Europe's greatest manufacturers!"
-whiteruthenia.88.t:0 "The Priorities of BelAZ"
-whiteruthenia.88.d:0 "As a state-owned company, BelAZ is under our complete control - and as such it is up to the government to decide what it should concentrate on constructing. What should we have BelAZ focus on?"
-whiteruthenia.88.a:0 "Agriculture."
-whiteruthenia.88.b:0 "Military vehicles."
-whiteruthenia.88.c:0 "Mining."
-whiteruthenia.88.e:0 "Construction."
-whiteruthenia.89.t:0 "Promoting Literacy"
-whiteruthenia.89.d:0 "Despite the efforts of the late King Heinrich, illiteracy is still a major problem in part due to the bickering between proponents of different alphabets for the Belarusian language. While we agree that eliminating illiteracy should be a priority, the question is how much we are willing to invest to this end."
-whiteruthenia.89.a:0 "Slow and steady wins the race."
-whiteruthenia.89.b:0 "This issue demands much attention."
-whiteruthenia.89.c:0 "This must be a major priority!"
-whiteruthenia.90.t:0 "Literacy Improves"
-whiteruthenia.90.d:0 "Thanks to our effort the literacy rate of Belorussia has finally begun to improve, however we are not finished yet."
-whiteruthenia.90.a:0 "The end is in sight."
-whiteruthenia.91.t:0 "Further Improvements In Literacy!"
-whiteruthenia.91.d:0 "Thanks to our efforts illiteracy is no longer a rampant problem in Belorussia, and the vast majority of the population is now able to read and write. This is a staggering success considering the agrarian and rural nature of the nation."
-whiteruthenia.91.a:0 "Fantastic!"
-whiteruthenia.92.t:0 "Ethanol Fuel Research"
-whiteruthenia.92.d:0 "To compensate for Belorussia's lack of resources needed to benefit our industry, we have decided to begin the mass-production of ethanol fuel. The question is, how much funding should we put into the research for its creation?"
-whiteruthenia.92.a:0 "There is no need to waste a huge amount of money."
-whiteruthenia.92.b:0 "Give them some funding, it is important."
-whiteruthenia.92.c:0 "Fuel is essential for our industry."
-whiteruthenia.93.t:0 "Ethanol Fuel Breakthrough"
-whiteruthenia.93.d:0 "Thanks to our funding, the research for ethanol fuel has had a breakthrough, allowing limited production of fuel to begin. While research will continue, this is a great day for a fuel-independent Belorussia!"
-whiteruthenia.93.a:0 "Our industry is fuelled at last!"
-whiteruthenia.94.t:0 "Ethanol Fuel Complete!"
-whiteruthenia.94.d:0 "Though it took a while our research into the production of ethanol fuel is complete! Now we can fuel our industry despite our lack of resources."
-whiteruthenia.94.a:0 "Great!"
-whiteruthenia.95.t:0 "Defending Our Airspace"
-whiteruthenia.95.d:0 "Our project to build anti-air guns in order to protect the skies of Belorussia from foreign invaders has begun and some are already being installed at this moment. Despite this there are some officials that have proposed that we invest more into this project in order to protect our fragile growing industry from conflict."
-whiteruthenia.95.a:0 "Some more anti-air guns would be ideal."
-whiteruthenia.95.b:0 "Belorussia must be well protected from harm!"
-whiteruthenia.95.c:0 "The current amount is sufficient."
-whiteruthenia.96.t:0 "Russians Acclimatise To Our Rule"
-whiteruthenia.96.d:0 "While there was some resistance at first from the Russian population in the lands we took from Russia, they have begun to realise their resistance is futile and accept our rule."
-whiteruthenia.96.a:0 "Great!"
-whiteruthenia.97.t:0 "Ukrainians Acclimatise To Our Rule"
-whiteruthenia.97.d:0 "While there was some resistance at first from the Ukrainian population in the lands we took from Ukraine, they have begun to realise their resistance is futile and accept our rule."
-whiteruthenia.97.a:0 "Great!"
-whiteruthenia.98.t:0 "Black Monday Overcome!"
-whiteruthenia.98.d:0 "After years of economic malaise due to Black Monday the actions of the government have brought an end to the crisis in Belorussia and our economy is reaching a level of success we have never seen before. It is truly a new era for our young nation."
-whiteruthenia.98.a:0 "Finally!"
+whiteruthenia.85.t:0 "프리피야티 습지 정리"
+whiteruthenia.85.d:0 "프리피야티 습지의 일부 개간이 이제 시작됩니다. 프리피야티 늪지는 광대하고 그것들을 없애기 위한 주요 시도가 우리의 능력을 넘어서지만, 제한된 허가만이라도 여전히 우리나라에 농업이나 산업을 위한 새로운 땅을 제공하는데 도움이 될 것입니다."
+whiteruthenia.85.a:0 "시작하자."
+whiteruthenia.86.t:0 "프리피야티 습지 배수"
+whiteruthenia.86.d:0 "농업과 산업을 위한 수천 평방 마일의 새로운 땅이 만들어지면서 습지의 배수가 마침내 끝이 났습니다. 이미 이 지역들은 매립된 습지에 농장을 지을 용의가 있는 다른나라 출신의 이주민들이 거주하고 있습니다. 틀림없이 이것은 장기적으로 우리나라에 도움이 될 것입니다."
+whiteruthenia.86.a:0 "드디어!"
+whiteruthenia.87.t:0 "벨라즈의 창조"
+whiteruthenia.87.d:0 "우리는 국가의 필요에 따라 다양한 종류의 차량과 기계를 우리 방향으로 구축할 수 있는 제조업체인 벨라즈의 설립 계획을 실행하기로 결정했습니다. 이 프로그램에 많은 자금이 투입되는 것은 비용이 많이 들고 정치적으로 위험할 수도 있지만, 그것은 의심할 여지 없이 주변 부문과 공급망을 강화함으로써 장기적으로 성과를 거둘 수 있으며 벨로루시 경제에 큰 도움이 될 것입니다."
+whiteruthenia.87.a:0 "벨라즈 투자"
+whiteruthenia.87.b:0 "벨라즈에게 많은 자금을 투자하십시오."
+whiteruthenia.87.c:0 "벨라즈는 동유럽의 가장 위대한 제조사가 될 것이다!"
+whiteruthenia.88.t:0 "벨라즈의 우선권"
+whiteruthenia.88.d:0 "국영기업인 벨라즈는 우리의 완전한 통제하에 있습니다. 따라서 건설에 어떤 중점을 두어야 할지를 결정하는 것은 정부에 달려 있습니다. 벨라즈는 무엇에 집중해야 할까요?"
+whiteruthenia.88.a:0 "농업."
+whiteruthenia.88.b:0 "군용 차량."
+whiteruthenia.88.c:0 "채굴."
+whiteruthenia.88.e:0 "건설."
+whiteruthenia.89.t:0 "읽고 쓰는 능력의 증진"
+whiteruthenia.89.d:0 "하인리히 왕의 노력에도 불구하고, 문맹은 부분적으로 벨로루시 언어를 위한 서로 다른 알파벳의 지지자들 사이의 다툼 때문에 여전히 주요한 문제가 되고 있습니다. 문맹을 제거하는 것이 우선되어야 한다는 것에는 동의하지만, 문제는 우리가 얼마나 이 목적에 기꺼이 투자할 것인가 입니다."
+whiteruthenia.89.a:0 "천천히 그리고 꾸준히 하는 자가 경주에서 승리한다."
+whiteruthenia.89.b:0 "이 문제는 많은 관심을 필요로 한다."
+whiteruthenia.89.c:0 "이것이 가장 중요한 우선 사항임에 틀림없다!"
+whiteruthenia.90.t:0 "향상된 읽고 쓰는 능력"
+whiteruthenia.90.d:0 "우리의 노력 덕분에 벨로루시의 식자율은 마침내 향상되기 시작했지만, 아직 끝나지 않았습니다."
+whiteruthenia.90.a:0 "끝이 눈에 보인다."
+whiteruthenia.91.t:0 "읽고 쓰는 능력이 향상되었다!"
+whiteruthenia.91.d:0 "우리의 노력 덕분에, 벨로루시에서 문맹은 더 이상 만연한 문제가 아니며, 대부분의 인구는 현재 읽고 쓸 수 있습니다. 이것은 국가의 농업과 농촌의 성격을 고려할 때 엄청난 성공입니다."
+whiteruthenia.91.a:0 "훌륭하다!"
+whiteruthenia.92.t:0 "에탄올 연료 연구"
+whiteruthenia.92.d:0 "우리 산업에 이익이 되는데 필요한 벨로루시의 자원 부족을 보완하기 위해 에탄올 연료의 대량 생산을 결정했습니다. 문제는 우리가 창조를 위해 얼마나 많은 기금을 연구에 투입해야 하는가 입니다."
+whiteruthenia.92.a:0 "큰 돈을 낭비할 필요는 없다."
+whiteruthenia.92.b:0 "그들에게 자금을 투자하라, 그것은 중요하다."
+whiteruthenia.92.c:0 "연료는 우리 산업에 필수적이다."
+whiteruthenia.93.t:0 "에탄올 연료 돌파구"
+whiteruthenia.93.d:0 "우리의 자금 지원 덕분에 에탄올 연료에 대한 연구는 연료의 제한된 생산을 시작하도록 하는 돌파구를 마련했습니다. 연구가 계속되는 동안, 이 날은 연료에 의존하지 않는 벨로루시에게 좋은 날입니다!"
+whiteruthenia.93.a:0 "우리의 산업은 마침내 활기를 띠고 있다!"
+whiteruthenia.94.t:0 "에탄올 연료 완성!"
+whiteruthenia.94.d:0 "에탄올 연료 생산에 대한 우리의 연구가 완성되기는 했지만, 이제는 우리는 자원이 부족함에도 불구하고 우리의 산업에 연료를 공급할 수 있습니다."
+whiteruthenia.94.a:0 "좋았어!"
+whiteruthenia.95.t:0 "영공 수호"
+whiteruthenia.95.d:0 "벨로루시의 하늘을 외국 침략자들로부터 보호하기 위해 대공포를 건설하려는 우리의 프로젝트가 시작되었고 일부는 이미 현재 설치되고 있습니다. 그럼에도 불구하고 일부 관계자들은 취약한 성장 산업을 분쟁으로부터 보호하기 위해 이 프로젝트에 더 많은 투자를 제안하고 있습니다."
+whiteruthenia.95.a:0 "더 많은 대공포는 이상적일 것이다."
+whiteruthenia.95.b:0 "벨로루시는 피해로부터 잘 보호되어야 한다!"
+whiteruthenia.95.c:0 "현재 금액이면 충분하다."
+whiteruthenia.96.t:0 "러시아가 우리의 규칙에 순응하다"
+whiteruthenia.96.d:0 "처음에는 우리가 러시아로부터 빼앗은 땅에서 러시아인들로부터 약간의 저항이 있었지만, 그들은 그들의 저항이 헛된 것이라는 것을 깨닫고 우리의 지배를 받아들이기 시작했습니다."
+whiteruthenia.96.a:0 "좋았어!"
+whiteruthenia.97.t:0 "우크라이나가 우리의 규칙에 순응하다"
+whiteruthenia.97.d:0 "처음에는 우리가 우크라이나로부터 빼앗은 땅에서 우크라이나인들로부터 약간의 저항이 있었지만, 그들은 그들의 저항이 헛된 것이라는 것을 깨닫고 우리의 지배를 받아들이기 시작했습니다."
+whiteruthenia.97.a:0 "좋았어!"
+whiteruthenia.98.t:0 "검은 월요일의 극복!"
+whiteruthenia.98.d:0 "검은 월요일로 인해 수년 간의 경제적 불쾌감을 겪은 정부의 행동으로 인해 벨로루시의 위기는 끝났으며 우리 경제는 이전에는 볼 수 없었던 수준의 성공을 거두었습니다. 우리 젊은이를 위한 진정한 새로운 시대입니다."
+whiteruthenia.98.a:0 "마침내!"
 
 ### Focuses ###
 WHR_crisis_reaction:0 "Reacting to Black Monday"
