--- a/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
@@ -181,7 +181,7 @@ worldnews.41.d:0 "The Second American Civil War, the bloodiest conflict to ever 
 worldnews.41.a:0 "이게 아메리칸 드림에 무슨 영향을 줄까?"
 
 worldnews.42.t:0 "미국 내전의 끝"
-worldnews.42.d:0 "신세계에서 일어난 가장 피비린내 나는 분쟁인 2차 미국 내전은 끝났습니다. 흐느껴 우는 미망인이 그들의 숨진 남편과 아들을 묻으면서, 옛 정권의 마지막 흔적이 아메리카 노동 연맹이 이끄는 미국 혁명에 휩쓸리고 있습니다. 낡은 자본주의 체제가 해체되고 프랑스와 영국과 비슷한 조직으로 바뀌었고 이제는 적색-검정색 국기가 이전 국회에 흔들리고 있고, 곧 신디케이트 의회로 전환 될 것입니다. \n\n 이미 아메리카 노동 연맹과 캐나다와의 관계가 긴장되고 있으며, 신세계에서 생디칼리즘의 선봉이 되기를 고대하고 있습니다. 미국-그것은 변했습니다. 영원히..."
+worldnews.42.d:0 "신세계에서 일어난 가장 피비린내 나는 분쟁인 2차 미국 내전은 끝났습니다. 흐느껴 우는 미망인이 그들의 숨진 남편과 아들을 묻으면서, 옛 정권의 마지막 흔적이 아메리카 노동 연맹이 이끄는 미국 혁명에 휩쓸리고 있습니다. 낡은 자본주의 체제가 해체되고 프랑스와 영국과 비슷한 조직으로 바뀌었고 이제는 적색-검정색 국기가 이전 국회에 흔들리고 있고, 곧 생디칼리스트 의회로 전환 될 것입니다. \n\n 이미 아메리카 노동 연맹과 캐나다와의 관계가 긴장되고 있으며, 신세계에서 생디칼리즘의 선봉이 되기를 고대하고 있습니다. 미국-그것은 변했습니다. 영원히..."
 worldnews.42.a:0 "세계 혁명은 더욱 확산되고 있다."
 
 worldnews.43.t:0 "제국 조약의 반란"
